[gd_scene load_steps=8 format=3 uid="uid://cailmcwldoxcu"]

[ext_resource type="PackedScene" uid="uid://rlwhf4bvjeq8" path="res://Objects/bullet.tscn" id="1_bco71"]
[ext_resource type="Script" path="res://Scripts/rocket.gd" id="2_0b66i"]
[ext_resource type="PackedScene" uid="uid://cbi5v1iliv6le" path="res://particles/RockeExplosion.tscn" id="3_asrkv"]
[ext_resource type="Texture2D" uid="uid://cyv4ugl0xa3hw" path="res://Sprites/Rocket.png" id="3_xqs2y"]
[ext_resource type="PackedScene" uid="uid://fieiff2dwqa4" path="res://particles/rocketSmoke.tscn" id="4_x5whm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk62o"]
size = Vector2(30, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_eqb0i"]

[node name="Rocket" node_paths=PackedStringArray("explosion", "collision", "explosion_duration_timer") instance=ExtResource("1_bco71")]
script = ExtResource("2_0b66i")
explosion = NodePath("Explosion")
collision = NodePath("Collision")
explosion_duration_timer = NodePath("ExplosionDuration")
explosion_particles = ExtResource("3_asrkv")

[node name="CPUParticles2D" parent="." index="0" instance=ExtResource("4_x5whm")]
position = Vector2(-16, 1)

[node name="BulletSprite" parent="." index="1"]
texture = ExtResource("3_xqs2y")

[node name="CollisionShape" parent="Collision" index="0"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_wk62o")

[node name="Explosion" type="Area2D" parent="." index="3"]
monitoring = false

[node name="ExplosionShape" type="CollisionShape2D" parent="Explosion" index="0"]
position = Vector2(10, 2)
shape = SubResource("CircleShape2D_eqb0i")

[node name="ExplosionDuration" type="Timer" parent="." index="4"]

[connection signal="body_entered" from="Explosion" to="." method="_on_explosion_body_entered"]
[connection signal="timeout" from="ExplosionDuration" to="." method="_on_explosion_duration_timeout"]
